Fix overflowing number.

--- a/src/scss/ia/_pipeline.scss
+++ b/src/scss/ia/_pipeline.scss
@@ -1,6 +1,10 @@
 $blue-variant: #7AB4E3;
 $gold-variant: #F6BE68;
 
+#filter-missing {
+    width: 9%;
+}
+
 #sort_pipeline {
     background-color: transparent;
     border: none;
